[gd_scene load_steps=7 format=3 uid="uid://bns0a3tv7bj8x"]

[ext_resource type="Script" path="res://scripts/melee_orc.gd" id="1_c1imw"]
[ext_resource type="ArrayMesh" uid="uid://d1a7a6axx3rnq" path="res://assets/TroopOrcHair3.obj" id="2_u5tq7"]
[ext_resource type="Script" path="res://scripts/health_bar_3d.gd" id="3_etd87"]
[ext_resource type="Script" path="res://scripts/HealthBar2D.gd" id="4_43baa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6mhaa"]
radius = 1.0
height = 3.0

[sub_resource type="SphereShape3D" id="SphereShape3D_v0v6o"]

[node name="Tank" type="CharacterBody3D" groups=["Orc Troop"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_c1imw")
MAX_HEALTH = 500.0
currentHealth = 500.0
healthRegen = 3.0
attackDmg = 1.0
attackSpeed = 5.0
attackRange = 0.1

[node name="Hitbox" type="CollisionShape3D" parent="." groups=["Orc Troop"]]
shape = SubResource("CapsuleShape3D_6mhaa")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.118189, 0, -6.32913e-09, 0, 0.0694266, 0, 1.03324e-08, 0, -0.0723969, 0, -1.45051, 0)
mesh = ExtResource("2_u5tq7")

[node name="DetectionRange" type="Area3D" parent="." groups=["Tower Troop"]]

[node name="Range" type="CollisionShape3D" parent="DetectionRange"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
shape = SubResource("SphereShape3D_v0v6o")

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HealthBar3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
billboard = 1
script = ExtResource("3_etd87")

[node name="SubViewport" type="SubViewport" parent="HealthBar3D"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(153, 30)
render_target_update_mode = 4

[node name="HealthBar2D" type="ProgressBar" parent="HealthBar3D/SubViewport"]
offset_right = 150.0
offset_bottom = 27.0
max_value = 500.0
value = 500.0
show_percentage = false
script = ExtResource("4_43baa")

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
